src/index.css
@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;300;400;500;600;700;900&display=swap');

:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

#light {
  --primary-color: #575edb;
  --header-bg-color: #fff;
  --app-bg-color: rgb(237, 237, 237);
  --border-color: rgb(218, 218, 218);
  --button-bg-color: #e2e2e2;
  --card-bg-color: rgb(255, 255, 255);
  --header-font-color: #242424;
  --subheader-color-off-light: rgb(138, 138, 138);
  --subheader-color-off-dark: rgb(75,75,75);
  --subheader-color-on: black;
  --font-color: black;
  --shadow-color: rgb(100,100,100);
  color: black;
}

#dark {
  --primary-color: #c2c5ff;
  --header-bg-color: #242424;
  --app-bg-color: rgb(19, 19, 19);
  --border-color: rgb(107, 107, 107);
  --button-bg-color: #5c5c5c;
  --card-bg-color: #242424;
  --header-font-color: #ffffff;
  --subheader-color-off-dark: rgb(138, 138, 138);
  --subheader-color-off-light: rgb(123, 123, 123);
  --subheader-color-on: rgb(255, 255, 255);
  --font-color: rgb(255, 255, 255);
  --shadow-color: rgb(0, 0, 0);
  color: white;
}

a {
  font-weight: 500;
  color: var(--header-font-color);
  text-decoration: inherit;
}

body {
  margin: 0;
  min-width: 320px;
  min-height: 100vh;
}

.App{
  min-height:100%;
  position:relative;
  background-color: var(--app-bg-color);
}

header {
  background-color: var(--header-bg-color);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 7.5vh;
  padding-left: 20px;
  padding-right: 20px;
  box-shadow: 0px 0px 5px 0px var(--shadow-color);
  font-family: 'Bitter', serif;
}

header > h1 {
  font-size: 1.75em;
  font-weight: 900;
  letter-spacing: 0.5px;
}

#navbar-homepage {
  display: flex;
  justify-content: center;
  align-items: center;
}

#navbar-homepage > img {
  margin: 0;
  opacity: 1;
  transform: scale(0.7);
}

#search-bar {
  display: flex;
  flex-direction: row;
  align-items: center;
}

input[type=text] {
  padding: 10px 10px;
  margin: 8px;
  border: 2px solid var(--border-color);
  border-radius: 10px;
  box-sizing: border-box;
  width: 250px;
}

input[type=image] {
  width: 25px;
  height: 25px;
  padding: 5px;
  cursor: pointer;
}

/*Simple css to style it like a toggle switch*/
.theme-switch-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  margin: 2em;
  margin-top: 1em;
  margin-bottom: 0em;
}

.theme-switch-wrapper > p {
  font-family: 'Bitter', sans-serif;
  font-size: 1em;
  margin-right: 1em;
}

.theme-switch {
  display: inline-block;
  height: 34px;
  position: relative;
  width: 60px;
}

.theme-switch input {
  display:none;
}

.slider {
  background-color: #ccc;
  bottom: 0;
  cursor: pointer;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: .4s;
}

.slider:before {
  background-color: #fff;
  bottom: 4px;
  content: "";
  height: 26px;
  left: 4px;
  position: absolute;
  transition: .4s;
  width: 26px;
}

input:checked + .slider {
  background-color: #575edb;
}

input:checked + .slider:before {
  transform: translateX(26px);
}

.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}


#subheader-list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-top: 0px;
  padding-left: 20px;
  padding-right: 20px;
}

#subheader-tab {
  list-style-type: none;
  display: flex;
}

#subheader-tab > li {
  font-family: 'Bitter', serif;
  font-weight: 700;
  font-size: 1.2em;
  color: var(--subheader-color-off-dark);
  padding: 10px;
  cursor: pointer;
}

#subheader-tab > li:hover {
  color: var(--subheader-color-on);
  transform: scale(1.05);
}

#subheader-decades {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 350px;
}

#subheader-decades > a {
  font-family: 'Bitter', serif;
  font-weight: 700;
  color: var(--subheader-color-off-light);
  padding: 5px;
  cursor: pointer;
}

#subheader-decades > a:hover {
  color: var(--subheader-color-on);
  transform: scale(1.05);
}

.title {
  font-family: 'Bitter', serif;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title > h1 {
  font-weight: 700;
  margin-top: 10px;
  margin-bottom: 1em;
  font-size: 2.5em;
}

.title > p {
  margin-top: 0;
}

#film-quote{
  color: var(--header-font-color);
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 1.1rem;
  font-style: italic;
  margin: 10px;
}

.page-list {
  list-style-type: none;
  overflow-x: hidden;
  overflow-y: hidden;
  white-space: nowrap;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin: 3em;
  margin-left: 50px;
  margin-right: 50px;
  transform: scale(0.95);
}

.page-list > li {
  color: var(--subheader-color-off-light);
  padding: 15px;
  margin: 5px;
  width: fit-content;
  height: 0.5em;
  font-weight: 700;
  line-height: 0.5em;
  cursor: pointer;
}

.page-list > li:hover {
  color: var(--subheader-color-on);
  transform: scale(1.05);
}

.page-list > .dot {
  cursor: default;
}

.page-list > .dot:hover {
  cursor: default;
  color: var(--subheader-color-off-light);
  transform: scale(1);
}

.page-list > .current-page {
  color: var(--subheader-color-on);
  transform: scale(1.05);
}

#container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: stretch;
  align-items: stretch;
  margin: auto;
  padding:10px;
  padding-bottom:60px;
  min-height: 50vh;
}

.card{
  background: var(--card-bg-color);
  border: 2px solid var(--border-color);
  border-radius: 10px;
  width: 47.5vw;
  margin: 5px;
  padding: 0;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  overflow: hidden;
}

.card > img {
  padding: 0;
  padding-right: 1.5em;
  width: 20em;
  height: 100%;
  object-fit: cover;
}

.card > .text {
  margin: 0.5em;
  padding: 2em;
  padding-left: 1em;
}

.card-title {
  font-family: 'Bitter', serif;
  font-size: 2em;
  line-height: 1.1;
}

.fav-icon {
  cursor: pointer;
  width: 2em;
  height: 2em;
  position: absolute;
  align-self: flex-start;
  margin: 5px;
  padding: 7px;
  background-color: white;
  border-radius: 25%;
  scale: 0.8;
  border: 2px solid rgb(198, 198, 198);
}

.fav-icon-text {
  visibility: hidden;
  font-size: small;
  width: max-content;
  background-color: var(--header-bg-color);
  font-weight: bold;
  color: var(--font-color);
  text-align: center;
  border-radius: 5px;
  padding: 7px;
  box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
  transform: scale(1.1);

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
  top: 0%;
  left: 110%;
  margin-left: 10px;
}

.fav-icon:hover {
  transform: scale(1.1);
  box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
}

.fav-icon:hover .fav-icon-text{
  visibility: visible;
}

.text > h2 {
  color: var(--subheader-color-off-dark);
  font-size: 1.2em;
  line-height: 1em;
}

.text > .byline {
  font-style: italic;
  color: var(--subheader-color-off-dark);
}

.text > p {
  font-size: 0.95em;
  line-height: 1.1;
}

.button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: 'Bitter', serif;
  cursor: pointer;
  transition: border-color 0.25s;
  background-color: var(--button-bg-color);
  color: var(--font-color);
}

.button:hover {
  border-color: var(--primary-color);
  color: var(--primary-color);
  background-color: var(--button-bg-color);
}
.button:focus,
.button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.circular-progress-bar {
  width: 4.5em;
  position: absolute;
  align-self: flex-end;
  margin: 0.5em;
  border-radius: 50%;
}

.circular-progress-bar:hover {
  transform: scale(1.05);
  box-shadow: 0px 0px 15px 2px rgb(255, 255, 255);
}

.CircularProgressbar-text{
  font-family: 'Bitter', serif;
  font-weight: 900;
}

.popup{
  position: fixed;
  top: 12%;
  width: fit-content;
  padding: 7px;
  background-color: var(--primary-color);
  color: white;
  border-radius: 7px;
  z-index: 1;
  animation: rise 2s ease-out forwards;
}

@keyframes rise {
  10% {transform: translateY(-10px);}
  40%{transform: translateY(0px);}
  50%{opacity: 1;}
  100%{ opacity: 0;
    display: none;
  }
}

footer {
  background-color:#242424;
  color: white;
  bottom: 0;
  width: 100%;
  height: 20vh;   /* Height of the footer */
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: 'Bitter', serif;
}

footer > p {
  margin-top: 0;
}

footer > a , footer > p > a {
  color: rgb(202, 220, 255);
}

footer > a:hover , footer > p > a:hover {
  color: #a1a5ff;
}

.not-found {
  height: 60vh;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  opacity: 0;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--subheader-color-off-light);
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--subheader-color-off-dark);
}

